fix inner wrapper not being aligned with stacked/floating label placement

--- a/core/src/components/select/select.scss
+++ b/core/src/components/select/select.scss
@@ -268,6 +268,8 @@ button {
 :host(.select-label-placement-stacked) .select-wrapper-inner,
 :host(.select-label-placement-floating) .select-wrapper-inner {
   width: 100%;
+
+  flex-grow: 1;
 }
 
 // Select Highlight
